--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My First Repo</title>
 </head>
 <body>
+
+    <h2>I can push in github my code.</h2>
+    <p> 1. at first you have to write git add . <br> 2. git commit -m "anything write" <br> 3. git push </p>
     
 </body>
 </html>
